# coapplicative

./: ChangeLog.md  README.md  coapplicative.cabal
src/Control/: Coapplicative.hs
src/Data/Functor/: Coapply.hs
