cabal-version: >= 1.10

name:           coapplicative
version:        0.0.1
synopsis:       Coapplicative functors
description:    Coapplicative and partially distributive functors
category:       Data, Structures
stability:      Experimental
homepage:       https://github.com/cmk/coapplicative
bug-reports:    https://github.com/cmk/coapplicative/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2020 Chris McKinlay
license:        BSD3
license-file:   LICENSE
build-type:     Simple
tested-with:    GHC == 8.6.3
extra-source-files:  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cmk/coapplicative

library
  exposed-modules:
      Control.Coapplicative
      Data.Functor.Coapply

  default-language: Haskell2010

  hs-source-dirs:
      src
  default-extensions: 
      ConstraintKinds
      MultiParamTypeClasses 
      OverloadedStrings 
      FlexibleContexts
      FlexibleInstances 
      ScopedTypeVariables
      TypeOperators

  ghc-options: -Wall
  build-depends:
      base              >= 4.9      && < 5.0
    , lawz              >= 0.1.1    && < 0.2
    , semigroupoids     >= 5        && < 6
    , tagged            >= 0.4.4    && < 1
    , transformers      >= 0.5      && < 0.6
